--- a/stylevideo.css
+++ b/stylevideo.css
@@ -1,4 +1,3 @@
-#map { height: 500px; max-width: 1000px;}
 
 img {
     max-height: 60px;
@@ -11,7 +10,9 @@ h4 {
     font-style: normal;
     font-size: 30px;
 } 
-button {
-    color: #000000;
-} 
 
+video {
+    width: fit-content;
+    height: fit-content;
+    max-height: 700 px;
+}
