last commit test vidéo
utilisation d'un lecteur vidéo externe
https://www.videojs.com

--- a/stylevideo.css
+++ b/stylevideo.css
@@ -12,7 +12,6 @@ h4 {
 } 
 
 video {
-    width: fit-content;
-    height: fit-content;
-    max-height: 700 px;
+    max-width: 420;
+    max-height: 747;
 }
