--- a/stylevideo.css
+++ b/stylevideo.css
@@ -2,16 +2,14 @@
 img {
     max-height: 60px;
 }
-
+body {
+    background-color: #6E4D2E;
+}
 h4 {
     text-align: center;
     font-family: "Anton", sans-serif;
+    color: #C0EFBF;
     font-weight: 400;
     font-style: normal;
     font-size: 30px;
 } 
-
-video {
-    max-width: 420;
-    max-height: 747;
-}
