--- a/style.css
+++ b/style.css
@@ -33,6 +33,8 @@ button {
     text-align: center;
     background-color: #C0EFBF;
     color: #6E4D2E;
+    border-radius: 10px;
+    padding: 10px 10px;
 
 } 
 
