--- a/style.css
+++ b/style.css
@@ -14,14 +14,14 @@ h4 {
     font-style: normal;
     font-size: 15px;
 } 
-.p.special{
+.p{
     color: #C0EFBF;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: 200;
     font-style: normal;
     font-size: 15px;
 }
-#POI{
+footer{
     color: #C0EFBF;
     font-family: "Anton", sans-serif;
     font-weight: 200;
